OPIK-1955 self review changes